src/objects/fc_csc__Split_Payment_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>fc_csc__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Zuora__ZInvoice__c</referenceTo>
        <relationshipLabel>Split Payment Invoices</relationshipLabel>
        <relationshipName>Split_Payment_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fc_csc__Payment_Applied__c</fullName>
        <label>Payment Applied</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>fc_csc__Split_Payment__c</fullName>
        <label>Split Payment</label>
        <referenceTo>fc_csc__Split_Payment__c</referenceTo>
        <relationshipLabel>Split Payment Invoices</relationshipLabel>
        <relationshipName>Split_Payment_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Split Payment Invoice</label>
    <nameField>
        <displayFormat>SPI-{0000000}</displayFormat>
        <label>Split Payment Invoices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Split Payment Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>